<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Services"
    android:background="@drawable/dp2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

    </RelativeLayout>



    <GridLayout
        android:columnCount="2"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/aesthetics_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Aesthetics_button" />

        <Button
            android:id="@+id/beauty_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Beauty_button" />

        <Button
            android:id="@+id/cleaning_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Cleaning_button" />

        <Button
            android:id="@+id/culinary_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Culinary_button" />

        <Button
            android:id="@+id/entertainment_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Entertainment_button" />

        <Button
            android:id="@+id/fashion_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Fashion_button" />

        <Button
            android:id="@+id/Health_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Health_button" />

        <Button
            android:id="@+id/photography_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Photography_button" />



    </GridLayout>

</LinearLayout>